lib/src/flutter_libsparkmobile_bindings_generated.dart


/// FFI-friendly wrapper for a <spark::OutputCoinData, bool>.
///
/// See https://github.com/firoorg/sparkmobile/blob/23099b0d9010a970ad75b9cfe05d568d634088f3/src/spark.cpp#L195
final class COutputRecipient extends ffi.Struct {
  external ffi.Pointer<COutputCoinData> output;

  @ffi.Int()
  external int subtractFee;
}

final class CCDataStream extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> data;

  @ffi.Int()
  external int length;
}

/// FFI-friendly wrapper for a spark::CSparkMintMeta.
///
/// CSparkMintMeta: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/primitives.h#L9
final class CCSparkMintMeta extends ffi.Struct {
  @ffi.Int()
  external int height;

  @ffi.Int()
  external int id;

  @ffi.Int()
  external int isUsed;

  external ffi.Pointer<ffi.UnsignedChar> txid;

  /// Diversifier.
  @ffi.Uint64()
  external int i;

  /// Encrypted diversifier.
  external ffi.Pointer<ffi.UnsignedChar> d;

  @ffi.Int()
  external int dLength;

  /// Value.
  @ffi.Uint64()
  external int v;

  external ffi.Pointer<ffi.Char> nonceHex;

  @ffi.Int()
  external int nonceHexLength;

  external ffi.Pointer<ffi.Char> memo;

  @ffi.Int()
  external int memoLength;

  external ffi.Pointer<ffi.UnsignedChar> serial_context;

  @ffi.Int()
  external int serial_contextLength;

  @ffi.Char()
  external int type;

  external ffi.Pointer<ffi.UnsignedChar> serializedCoin;

  @ffi.Int()
  external int serializedCoinLength;
}

/// FFI-friendly wrapper for a spark::CoverSetData.
///
/// CoverSetData: https://github.com/firoorg/sparkmobile/blob/8bf17cd3deba6c3b0d10e89282e02936d7e71cdd/src/spend_transaction.h#L28
final class CCoverSetData extends ffi.Struct {
  /// vs. struct CCoin* cover_set;
  external ffi.Pointer<CCDataStream> cover_set;

  @ffi.Int()
  external int cover_setLength;

  external ffi.Pointer<ffi.UnsignedChar> cover_set_representation;

  @ffi.Int()
  external int cover_set_representationLength;

  @ffi.Int()
  external int setId;
}

final class OutputScript extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> bytes;

  @ffi.Int()
  external int length;
}

/// Aggregate data structure to handle passing spark mint/spend data across FFI
final class AggregateCoinData extends ffi.Struct {
  @ffi.Char()
  external int type;

  @ffi.Uint64()
  external int diversifier;

  @ffi.Uint64()
  external int value;

  external ffi.Pointer<ffi.Char> address;

  external ffi.Pointer<ffi.Char> memo;

  external ffi.Pointer<ffi.Char> lTagHash;

  external ffi.Pointer<ffi.UnsignedChar> encryptedDiversifier;

  @ffi.Int()
  external int encryptedDiversifierLength;

  external ffi.Pointer<ffi.UnsignedChar> serial;

  @ffi.Int()
  external int serialLength;

  external ffi.Pointer<ffi.Char> nonceHex;

  @ffi.Int()
  external int nonceHexLength;
}

final class UsedCoin extends ffi.Struct {
  external ffi.Pointer<CCDataStream> serializedCoin;

  external ffi.Pointer<CCDataStream> serializedCoinContext;

  @ffi.Int()
  external int groupId;

  @ffi.Int()
  external int height;
}

/// Aggregate data structure to handle passing spark spend data across FFI.
///
/// Contains the serialized transaction or the error message if isError is true.
final class SparkSpendTransactionResult extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> data;

  @ffi.Int()
  external int dataLength;

  external ffi.Pointer<OutputScript> outputScripts;

  @ffi.Int()
  external int outputScriptsLength;

  external ffi.Pointer<UsedCoin> usedCoins;

  @ffi.Int()
  external int usedCoinsLength;

  @ffi.Int64()
  external int fee;

  @ffi.Int()
  external int isError;
}

final class DartInputData extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> txHash;

  @ffi.Int()
  external int txHashLength;

  @ffi.Int()
  external int vout;
}

final class SerializedMintContextResult extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> context;

  @ffi.Int()
  external int contextLength;
}

final class ValidateAddressResult extends ffi.Struct {
  @ffi.Int()
  external int isValid;

  external ffi.Pointer<ffi.Char> errorMessage;
}

final class BlockHashAndId extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> hash;

  @ffi.Int()
  external int id;
}

final class DartSpendCoinData extends ffi.Struct {
  external ffi.Pointer<CCDataStream> serializedCoin;

  external ffi.Pointer<CCDataStream> serializedCoinContext;

  @ffi.Int()
  external int groupId;

  @ffi.Int()
  external int height;
}

final class SparkFeeResult extends ffi.Struct {
  external ffi.Pointer<ffi.Char> error;

  @ffi.Int64()
  external int fee;
}

final class SparkNameCommitmentResult extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> commitment;

  @ffi.Int()
  external int commitmentLength;

  external ffi.Pointer<ffi.Char> error;
}

final class SparkNameScript extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> script;

  @ffi.Int()
  external int scriptLength;

  external ffi.Pointer<ffi.Char> error;

  @ffi.Int()
  external int size;
}

final class SparkAddressOwnershipProofResult extends ffi.Struct {
  external ffi.Pointer<ffi.UnsignedChar> proof;

  @ffi.Int()
  external int proofLength;

  external ffi.Pointer<ffi.Char> error;
}
